Added purchase event offer section

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -808,6 +808,14 @@
           }
         }
       }
+    },
+    "purchase_event_offer": {
+      "name": "Purchase event offer",
+      "settings": {
+        "title": {
+          "label": "Purchase event offer"
+        }
+      }
     }
   }
 }
