Fixed bugs, fixed mobile UI issues, removed console logs, added animation for event member

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -74,7 +74,7 @@
     "first_name": "First name",
     "last_name": "Last name",
     "phone_number": "Phone number",
-    "sex": "sex",
+    "sex": "Sex",
     "member_id": "Member id",
     "postal_code": "Postal code",
     "birth_date": "Birth date",
